syntax = "proto3";
package flight;

option go_package = "github.com/ansoncht/flight-microservices/proto/poster";

service Poster {
  rpc SendSummary (SendSummaryRequest) returns (SendSummaryResponse) {}
}

message FlightStat {
  string destination = 1;
  int64 frequency = 2;
}

message SendSummaryRequest {
  string date = 1;
  string origin = 2;
  repeated FlightStat flight_stats = 3;
}

message SendSummaryResponse {}
